# durak-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint_test.yml
durak_bot/: __init__.py  __main__.py
durak_bot/algorithm/actions/: add_card.py  attack.py  defense.py
durak_bot/const/: cards.py  decks.py  smiles.py
durak_bot/core/: config.py
durak_bot/ctx/: __init__.py
durak_bot/ctx/types/: base.py  cards_state.py  lobby_state.py  players_state.py  stats_state.py
durak_bot/database/: __init__.py  client.py
durak_bot/database/models/: __init__.py  game.py
durak_bot/durak/: instance.py
durak_bot/durak/handlers/: __init__.py  beat.py  card_withdrawal.py  debug.py  error.py  friend_list.py  game.py  game_over.py  game_ready.py  hand.py  init.py  invite.py  mode.py  order.py  players.py  ready_on.py  rejects.py  shutdown.py  transfer.py  turn.py  turn_start.py  uu.py  win.py
durak_bot/types/: card.py  player_state.py
durak_bot/util/: cards.py  logger.py
durakonline/: __init__.py  authorization.py  durakonline.py  friend.py  game.py  pyproject.toml  socket_listener.py
durakonline/utils/: __init__.py  enums.py  objects.py
tests/: test_card.py
tests/algorithm/: test_add_card.py  test_attack.py  test_defend.py
