[tool.poetry]
name = "durakonline"
version = "0.1.0"
description = ""
authors = ["Arsenii es3n1n <me@es3n.in>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
aiohttp = "^3.10.8"
msgspec = "^0.18.6"
pysocks = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
